[tool.poetry]
name = "number-to-french-converter"
version = "0.1.0"
description = "A Python package to convert numbers into their French word equivalents"
authors = ["Sourour"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7,<4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
